# clage_homeserver

./: ClageWaterHeater.py  LICENSE  Makefile  README.md  Run.py  pyproject.toml  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: BugReport.yaml  BugReport.yml  config.yml
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  pythonapp.yml
api-docs/: klacol-ClageHomeServer-1.4-resolved.yaml
clage_homeserver/: __init__.py  clage_homeserver.py
clage_waterheater/: __init__.py  clage_waterheater.py
tests/: test_clage_homeserver.py  test_clage_homeserver_mapper.py  test_clage_waterheater.py  test_clage_waterheater_mapper.py  test_math.py
