[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clage_homeserver"
version = "0.1.17"
description = "A Python API for accessing and managing an electrical CLAGE continuous waterheater (e.g. DSX Touch) via the CLAGE Homeserver REST API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "Klaus Aengenvoort" },
]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/klacol/clage_homeserver"

[tool.setuptools.packages.find]
include = ["clage_homeserver*"]
